# MyGit

./: README.md
MyIDE/BuildFile/: CMakeLists.txt
tSrc_1/: CMakeLists.txt  run.sh
tSrc_1/src/: CMakeLists.txt
